# pdywilson.github.io

./: .gitignore  advent.html  checkout.html  chore.html  guitar.html  index.html  inflation.html  jam.html  jam_1.html  jam_2.html  jam_3.html  jam_4.html  jambuddy.html  mypiano_01.html  piano.html  pints.html  poke.html  pokelearn.html  recipes.html  travel.html
blog/: 2023-02-10.md  index.md
bounces/: .htaccess  folderScrape.ipynb  generate.sh  index-old.html  index.html
bounces/.ipynb_checkpoints/: folderScrape-checkpoint.ipynb
bounces/bits/: generate.sh
bounces/kotlin-html/: build.gradle.kts  generate.sh  (+1 more)
cool/: 404.html  README.md  _config.yml  cool.html  cool.ipynb  index.md  paddy.md
css/: checkout.css  chore.css  grayscale.css  inflation.css  pints.css  poke.css  pokelearn.css  recipes-mobile.css  recipes.css  travel.css
deploy/: Cindy.js  Cindy.js.map  Cindy3D.js.map  CindyGL.js.map  CindyJS.css.map  QuickHull3D.js.map  improvrnn-plugin.js  jambuddy.html  jambuddy10.html  jambuddy3.html  jambuddy4.html
game/: $catalog.json  index.html  korge-game.js  korge-game.js.map  untitled.js  untitled.js.map
img/: jambuddy.html
islantilla/: custom.css  open.py
js/: checkout.js  chore.js  inflation.js  pints.js  pocketbase.js  poke.js  pokelearn.js  recipes.js
rl/lunar/: README.md  lunar.py  pyproject.toml  reinforce.py
scss/: _contact.scss  _masthead.scss  _navbar.scss  _projects.scss  _signup.scss  grayscale.css  grayscale.css.map
travel/: README.md  content.toml  pyproject.toml  run.sh
travel/toml_site_generator/: generate_site.py
(+37 files in other folders)
