[tool.poetry]
name = "toml-site-generator"
version = "0.1.0"
description = "Generate static HTML pages from a TOML content file."
authors = ["Patrick Wilson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"