[tool.poetry]
name = "lunar"
version = "0.1.0"
description = ""
authors = ["pdywilson <pdywilson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
box2d-py = "^2.3.8"
pygame = "^2.5.2"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
torch = "^2.2.0"
seaborn = "^0.13.0"
mujoco = "^2.3.7"
imageio = "^2.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
